--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-slim",
   "version": "0.9.0",
-  "description": "A generator for Yeoman",
+  "description": "A Yo Generator which sets up a new, on the Slim Framework based, project.",
   "keywords": [
     "yeoman-generator"
   ],
