--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "generator-slim",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "A Yo Generator which sets up a new, on the Slim Framework based, project.",
   "keywords": [
-    "yeoman-generator", "php", "slim"
+    "yeoman-generator",
+    "php",
+    "slim"
   ],
   "homepage": "http://katywings.github.io/generator-slim",
   "bugs": "https://github.com/katywings/generator-slim/issues",
