--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "yeoman-generator": "~0.10.2",
-    "exec-sync": "~0.1.6"
+    "exec-sync": "~0.1.6",
+    "random-string": "0.1.1"
   },
   "devDependencies": {
     "mocha": "~1.9.0"
